pxc/tests/test_190_unnamed_tmpl/ut6.px
namespace ut6;
public import common -;

threaded function {f} int bar(int x)
{
  return f(x);
}

function void baz()
{
  println("baz");
}

threaded function int foo()
{
  int y = 3;
  int z = bar(y) int (int a) {
    baz(); // error
    return a + 1;
  }
  return z;
}

{
  int z = foo();
  println(z);
}
